# svgrep

./: Cargo.toml  README.md
src/: main.rs
test/: semicolon-separated.csv  tilde-separated.csv
