[package]
name = "svgrep"
version = "1.1.1"
description = "A grep-like utility for separated-values files written in Rust"
homepage = "https://github.com/tsdh/svgrep"
repository = "https://github.com/tsdh/svgrep.git"
authors = ["Tassilo Horn <tsdh@gnu.org>"]
license = "GPL-3.0+"


[dependencies]
clap = "2.29.0"
regex = "1.3.9"
lazy_static = "1.4.0"
